Bug 323157 - 2D graphs are undeletable
Summary: 2D graphs are undeletable
Status: RESOLVED FIXED
Alias: None
Product: kalgebra
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.11
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-04 12:42 UTC by Yuri Chornoivan
Modified: 2013-08-04 17:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yuri Chornoivan 2013-08-04 12:42:34 UTC
In a current git/master version (+ git/master of analitza) it is impossible to remove functions from graph list.

Reproducible: Always

Steps to Reproduce:
1. Switch to "2D Graph" tab.
2. Add a function (say, "sin(x)).
3. Press "OK"
4. Double click on "sin(x)" to edit.
Actual Results:  
Whatever you do, you cannot delete the function from graph.

Expected Results:  
There should be some action or button to delete the function.

Thanks for fixing this bug.
Comment 1 Aleix Pol 2013-08-04 17:45:17 UTC
Git commit 545afa88801e99bb72fb0af4e5aca821b3d2be5a by Aleix Pol.
Committed on 04/08/2013 at 17:45.
Pushed by apol into branch 'master'.

Make it possible to remove plots

Changes the "clear" button in the FunctionEdit for a "remove" button.

M  +10   -9    src/functionedit.cpp
M  +5    -4    src/functionedit.h
M  +13   -0    src/kalgebra.cpp
M  +1    -0    src/kalgebra.h

http://commits.kde.org/kalgebra/545afa88801e99bb72fb0af4e5aca821b3d2be5a