Make it possible to remove plots

Changes the "clear" button in the FunctionEdit for a "remove" button.

BUG: 323157